Thu Jun 16 00:13:41 2005  Tanaka Akira  <akr@m17n.org>

	* lib/resolv.rb (Resolv::DNS::Resource#ttl): new attribute.
	  (Resolv::DNS::Resource#==): ignore @ttl.
	  (Resolv::DNS::Resource#hash): ditto.
	  (Resolv::DNS::Message::MessageDecoder#get_rr): save TTL in a
	  Resource object.
	  based on [ruby-core:5190] by Eric Hodel.

Wed Jun 15 18:26:39 2005  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tk.rb: support "tk inactive" sub-command [for Tcl/Tk8.5a3]

	* ext/tk/lib/tk/namespace.rb: support "namespace path" sub-command and
	  'namespace ensemble' sub-command [for Tcl/Tk8.5a3]

Tue Jun 14 02:02:43 2005  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/tkutil/tkutil.c: add TkUtil::CallbackSubst.subst_arg(m, ...)
	  & _define_attribute_aliases(hash) to get substitution-argument from
	  attributes (e.g. subst_arg(:x,:y,:num,:button) --> "%x %y %b %b ").

	* ext/tk/lib/tk/event.rb: use _define_attribute_aliases().

Mon Jun 13 13:03:08 2005  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* hash.c (ruby_setenv): fixed SEGV. [ruby-dev:26186]

Mon Jun 13 01:54:20 2005  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* signal.c (sigexit): call rb_thread_signal_exit() instead of
	  rb_exit().  [ruby-dev:26347]

	* eval.c (rb_thread_signal_exit): a new function to exit on main
	  thread.

	* eval.c (rb_thread_switch): exit status should be retrieved from
	  ruby_errinfo.

	* eval.c (rb_f_exit): ensure exit(0) should call
	  exit(EXIT_SUCCESS).

Mon Jun 13 01:20:02 2005  Tanaka Akira  <akr@m17n.org>

	* eval.c (rb_gc_mark_threads): curr_thread may not be part of the
	  thread list.  [ruby-dev:26312]

Sat Jun 11 22:34:44 2005  Minero Aoki  <aamine@loveruby.net>

	* parse.y: missing arg_paren event.  This patch is contributed by
	  Mitchell N Charity.

Fri Jun 10 23:55:17 2005  Tanaka Akira  <akr@m17n.org>

	* eval.c (unknown_node): show more information.  [ruby-dev:26196]

Fri Jun 10 23:35:34 2005  Yukihiro Matsumoto  <matz@ruby-lang.org>
